# aquascope

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  ARCHITECTURE.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  coi-serviceworker.js  flake.nix  index.html  rust-toolchain.toml
assets/: index-1b9b4f27.js  index-33c075e4.js  index-7487630b.css  libaddr2line-c29e40a4e2fdf368-0c9575cb.rlib  libadler-073ed9cec2dc6e64-bc46f127.rlib  libcfg_if-5cae6b617799c3ac-6cd68a62.rlib  libcompiler_builtins-11caaeb037a0ea74-9812f88f.rlib  libgetopts-4228669065cf2a14-10fdd27d.rlib  libhashbrown-76a484aaeaf14d39-4092da27.rlib  liblibc-a7bc56b7163103b1-e0fc3543.rlib  libmemchr-59fdcccdf0805fe0-ea13c80c.rlib  libminiz_oxide-4a67c87bba0364d0-b6c775db.rlib  (+10 more)
crates/aquascope/: Cargo.toml
crates/aquascope/bindings/: BoolStep.ts  CallTypes.ts  LoanPoints.ts  LoanRegions.ts  MFrame.ts  MHeapAllocKind.ts  MLocation.ts  MPathSegment.ts  MStep.ts  MValue.ts  MoveKey.ts  PermDiff.ts  PermissionsBoundary.ts  PermissionsDataDiff.ts  PermissionsDiff.ts  PermissionsInfo.ts  PermissionsStateStep.ts  RefinementInfo.ts  RefinementRegion.ts  TypeInfo.ts  ValueStep.ts
crates/aquascope/src/: cached.rs  lib.rs  test_utils.rs
crates/aquascope/src/analysis/: engine.rs  find_bindings.rs  find_calls.rs  find_hir_calls.rs  find_mir_calls.rs  ir_mapper.rs  mod.rs  scrape_hir.rs
crates/aquascope/src/analysis/boundaries/: mod.rs  path_visitor.rs
crates/aquascope/src/analysis/ir_mapper/: body_graph.rs  diagnostics.rs  mir_locations.rs  mod.rs  post_dominators.rs
crates/aquascope/src/analysis/permissions/: context.rs  flow.rs  flow_datalog.rs  graphviz.rs  mod.rs  output.rs  permission_boundaries.rs  permission_stepper.rs  permissions_datalog.rs  places_conflict.rs  utils.rs
crates/aquascope/src/analysis/regions/: abstract_outlives.rs  local_outlives.rs  mod.rs
crates/aquascope/src/analysis/stepper/: find_steps.rs  hir_steps.rs  mod.rs  segment_tree.rs  segmented_mir.rs  stepper.rs  stepper_new.rs  stepper_old.rs  table_builder.rs
crates/aquascope/src/errors/: mod.rs  silent.rs  silent_emitter.rs
crates/aquascope/src/indexed/: impls.rs  mod.rs
crates/aquascope/src/interpret/: eval.rs  mapping.rs  mod.rs  mvalue.rs
crates/aquascope/src/interpreter/: eval.rs  mapper.rs  mapping.rs  miri.rs  miri_utils.rs  mod.rs  mvalue.rs  step.rs
crates/aquascope/src/mir/: aliases.rs  borrowck_facts.rs  engine.rs  mod.rs  utils.rs
crates/aquascope/src/source_map/: find_bodies.rs  find_calls.rs  hir_span.rs  mir_span.rs  mod.rs  range.rs  span_tree.rs  spanner.rs
crates/aquascope/tests/: boundaries.rs  interpreter.rs  permissions.rs  stepper.rs  testing.rs
crates/aquascope/tests/boundaries/: box.test  closure_0.test  match_1.test  struct_udpate.test
crates/aquascope/tests/interpreter/: basic.test  box.test  stackref.test
crates/aquascope/tests/lifetimes/: simple-00.test  simple-01.test
crates/aquascope/tests/refinement/: interior_move.test  max_perms_0.test  max_perms_1.test  max_perms_2.test  mut_ref_0.test  refine_basic_0.test  refine_basic_1.test  refine_basic_4.test  refine_basic_5.test  refine_field_0.test  refine_field_1.test  refine_field_2.test  refine_field_3.test  refine_match_0.test
crates/aquascope/tests/snapshots/: boundaries__(anon.body)@captured_0.test.snap  boundaries__(anon.body)@closure_0.test.snap  boundaries__(anon.body)@closure_1.test.snap  boundaries__<anon body>@captured_0.test.snap  boundaries__<anon body>@closure_0.test.snap  boundaries__<anon body>@closure_1.test.snap  boundaries__add_big_strings@closure_1.test.snap  boundaries__add_ref@add_ref.test.snap  boundaries__add_ref@add_ref.test.snap.new  boundaries__arr@array.test.snap  boundaries__bar@coerced_0.test.snap  boundaries__bar@moved_0.test.snap  boundaries__bx@box.test.snap  boundaries__consume@read_on_copy_0.test.snap  boundaries__dangling_pointer@dangling_pointer.test.snap  boundaries__foo@mut_assign.test.snap  boundaries__get_first@type-driven-flows.test.snap  boundaries__get_first_constrained@type-driven-flows.test.snap  boundaries__get_first_specified@type-driven-flows.test.snap  boundaries__main@assignop_path_resolution.test.snap  boundaries__main@captured_0.test.snap  boundaries__main@closure_0.test.snap  boundaries__main@if_0.test.snap  boundaries__main@if_1.test.snap  boundaries__main@match_0.test.snap  boundaries__main@read_on_copy_0.test.snap  boundaries__main@struct_udpate.test.snap  boundaries__missing_constraint@missing_constraint.test.snap  boundaries__moveit@match_1.test.snap  boundaries__mut_arr@array.test.snap  boundaries__mut_bx@box.test.snap  boundaries__mut_slice@array.test.snap  boundaries__mutate@deref_assign_0.test.snap  boundaries__print_first@type-driven-flows.test.snap  boundaries__refit@match_1.test.snap  boundaries__slice@array.test.snap  boundaries__test@deref_assign_0.test.snap  boundaries__with_int@array_1.test.snap  boundaries__with_string@array_1.test.snap  interpreter__basic.test.snap  (+36 more)
crates/aquascope/tests/steps/: linear_0.test
crates/aquascope_front/: Cargo.toml
crates/aquascope_front/bindings/: AquascopeError.ts  PermissionsBoundaryOutput.ts  PermissionsDiffOutput.ts  PermissionsOutput.ts  ReceiverTypesOutput.ts
crates/aquascope_front/src/: lib.rs  method_receivers.rs  plugin.rs  source.rs  spans.rs
crates/aquascope_front/src/permissions/: mod.rs
crates/aquascope_front/src/style/: mod.rs
crates/aquascope_serve/: Cargo.toml  README.md  rustfmt.toml
crates/aquascope_serve/src/: container.rs  main.rs  server.rs  shell.rs
crates/aquascope_workspace_utils/: Cargo.toml
crates/aquascope_workspace_utils/src/: lib.rs
crates/mdbook-aquascope/: .gitignore  Cargo.toml  build.rs  dist
crates/mdbook-aquascope/src/: annotations.rs  block.rs  cache.rs  lib.rs  main.rs  permissions.rs  preprocessor.rs
crates/mdbook-aquascope/test-book/: .gitignore  book.toml
crates/mdbook-aquascope/test-book/src/: chapter_1.md
crates/rustc_plugin/: Cargo.toml
crates/rustc_plugin/src/: lib.rs
deploy/: ping.sh  update.py  (+2 more)
(+17626 files in other folders)
