[workspace]
members = ["crates/*"]
exclude = ["files"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.0"
serde = { version = "1", features = ["derive"] }
rustc_plugin = "=0.12.0-nightly-2024-12-15"
rustc_utils = "=0.12.0-nightly-2024-12-15"

# Make snapshot testing faster
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
