[package]
name = "aquascope"
version = "0.1.4"
license = "MIT"
edition = "2021"
authors = [
  "Gavin Gray <gavinleroy6@gmail.com>",
  "Will Crichton <wcrichto@cs.stanford.edu>"
]
description = "Permissions analyzer for Rust code"
repository = "https://github.com/cognitive-engineering-lab/aquascope"
publish = false

[package.metadata.rust-analyzer]
rustc_private = true

[features]
testing = ["lazy_static", "insta", "rustc-utils/test"]

[dependencies]
anyhow = "1.0.0"
log = "0.4"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
ts-rs = "6.2"
regex = "1"
fluid-let = "1.0"

# interpret module
miri = {git = "https://github.com/rust-lang/miri.git", rev = "35d6927663065d7fdeeaed45dda7e7748fc9f222"}
aquascope_workspace_utils = { version = "0.1", path = "../aquascope_workspace_utils" }

# testing
lazy_static = { version = "1.4", optional = true }
insta = { version = "1.22.0", features = ["json", "yaml", "redactions"], optional = true }

[dependencies.rustc-utils]
git = "https://github.com/cognitive-engineering-lab/rustc-plugin"
tag = "nightly-2023-04-12-v0.1.2"

[dev-dependencies]
aquascope = { path = ".", features = ["testing"] }
env_logger = "0.9.3"
test-log = "0.2.11"
