[package]
name = "aquascope_front"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = [
  "Gavin Gray <gavinleroy6@gmail.com>",
  "Will Crichton <wcrichto@cs.stanford.edu>"
]
description = "Interactive visualizations of Rust at compile-time and run-time"
repository = "https://github.com/cognitive-engineering-lab/aquascope"
publish = false

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
aquascope = {version = "0.1", path = "../aquascope"}
anyhow = "1"
log = "0.4"
serde = { workspace = true }
serde_json = "1"
ts-rs = "6.2"
itertools = "0.10.5"
fluid-let = "1.0"
rustc_plugin = "0.7.0-nightly-2023-08-25"
rustc_utils = "0.7.0-nightly-2023-08-25"

# For binaries
env_logger = {version = "0.9", default-features = false}
clap = {version = "3.1", default-features = false, features = ["std", "derive"]}
