[package]
name = "aquascope_front"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = [
  "Gavin Gray <gavinleroy6@gmail.com>",
  "Will Crichton <wcrichto@cs.stanford.edu>"
]
description = "Interactive visualizations of Rust at compile-time and run-time"
repository = "https://github.com/cognitive-engineering-lab/aquascope"
publish = false

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
aquascope = {version = "0.1", path = "../aquascope"}
anyhow = "1"
log = "0.4"
serde = { workspace = true }
serde_json = "1"
ts-rs = "6.2"
itertools = "0.10.5"
fluid-let = "1.0"
rustc_plugin = { workspace = true }
rustc_utils = { workspace = true }

# For binaries
env_logger = {version = "0.9", default-features = false, features = ["humantime"]}
clap = {version = "3.1", default-features = false, features = ["std", "derive"]}
