[package]
name = "aquascope_serve"
authors = [
  "Will Crichton <wcrichto@cs.stanford.edu>",
  "Gavin Gray <gavinleroy6@gmail.com>"
]
version = "0.1.0"
license = "MIT"
edition = "2021"
default-run = "aquascope_serve"
repository = "https://github.com/cognitive-engineering-lab/aquascope"
publish = false

[dependencies]
async-trait = "0.1.52"
axum = { version = "0.5", features = ["headers"] }
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.0"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
snafu = "0.7.0"
tokio = { version = "1.9", features = ["macros", "time", "process", "rt-multi-thread"] }
tower-http = { version = "0.3", features = ["cors", "fs", "set-header", "trace"] }
bollard = "0.13"
tar = "0.4"
tempfile = "3.3.0"
lazy_static = "1"

[features]
no-docker = []
