[package]
name = "aquascope_serve"
authors = [
  "Will Crichton <wcrichto@cs.stanford.edu>",
  "Gavin Gray <gavinleroy6@gmail.com>"
]
version = "0.1.0"
license = "MIT"
edition = "2021"
default-run = "aquascope_serve"
repository = "https://github.com/cognitive-engineering-lab/aquascope"
publish = false

[dependencies]
anyhow = "1"
aquascope_workspace_utils = {version = "0.3",  path = "../aquascope_workspace_utils"}
async-trait = "0.1.52"
axum = { version = "0.5" }
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.0"
serde.workspace = true
serde_json = "1.0"
snafu = "0.7.0"
tokio = { version = "1.9", features = ["macros", "time", "process", "rt-multi-thread"] }
tower-http = { version = "0.3", features = ["cors", "trace"] }
tar = "0.4"
tempfile = "3.3.0"
