[package]
name = "aquascope_workspace_utils"
authors = [
  "Will Crichton <wcrichto@cs.stanford.edu>",
  "Gavin Gray <gavinleroy6@gmail.com>"
]
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/cognitive-engineering-lab/aquascope"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
anyhow = "1"
