[package]
name = "mdbook-aquascope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook-preprocessor-utils = "0.1"
nom = "7"
nom_locate = "4"
anyhow = "1"
tempfile = "3"
html-escape = "0.2"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
ts-rs = "6.2"
rayon = "1"
aquascope_workspace_utils = { path = "../aquascope_workspace_utils" }
regex = "1"


[dev-dependencies]
maplit = "*"
