[package]
name = "mdbook-aquascope"
authors = [
  "Will Crichton <wcrichto@cs.stanford.edu>",
  "Gavin Gray <gavinleroy6@gmail.com>"
]
description = "Interactive Aquascope editor for your mdBook"
license = "MIT"
version = "0.1.2"
edition = "2021"
include = [
  "src/**/*",
  "Cargo.toml",
  "dist/**/*"
]
repository = "https://github.com/cognitive-engineering-lab/aquascope"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = ["mdbook-preprocessor-utils/testing"]

[dependencies]
mdbook-preprocessor-utils = "0.1"
nom = "7"
nom_locate = "4"
anyhow = "1"
tempfile = "3"
html-escape = "0.2"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
ts-rs = "6.2"
rayon = "1"
aquascope_workspace_utils = {version = "0.1",  path = "../aquascope_workspace_utils"}
regex = "1"
flate2 = "1"
wait-timeout = "0.2"
itertools = "0.10"

[dev-dependencies]
mdbook-aquascope = { path = ".", features = ["dev"] }
maplit = "1.0"
