[package]
name = "mdbook-aquascope"
authors = [
  "Will Crichton <wcrichto@cs.stanford.edu>",
  "Gavin Gray <gavinleroy6@gmail.com>"
]
description = "Interactive Aquascope editor for your mdBook"
license = "MIT"
version = "0.3.8"
edition = "2021"
include = [
  "src/**/*",
  "Cargo.toml",
  "js/**/*"
]
repository = "https://github.com/cognitive-engineering-lab/aquascope"

[features]
dev = ["mdbook-preprocessor-utils/testing"]

[dependencies]
clap = { version = "=4.3.24", features = ["derive"] }
mdbook = "= 0.4.45"
mdbook-preprocessor-utils = "0.2.0"
nom = "7"
nom_locate = "4"
anyhow.workspace = true
tempfile = "3"
serde_json = "1"
serde = { workspace = true }
ts-rs = "6.2"
rayon = "1"
aquascope_workspace_utils = {version = "0.3",  path = "../aquascope_workspace_utils"}
regex = "1"
flate2 = "1"
wait-timeout = "0.2"
itertools = "0.10"
lazy_static = "1"

[dev-dependencies]
mdbook-aquascope = { path = ".", features = ["dev"] }
maplit = "1.0"

[build-dependencies]
anyhow.workspace = true
mdbook-preprocessor-utils = "0.2.0"
