[package]
name = "rustc_plugin"
version = "0.1.0"
edition = "2021"
authors = ["Gavin Gray <gavinleroy6@gmail.com>"]
description = "Framework for integrating a rustc plugin with Cargo"
repository = "https://github.com/gavinleroy/aquascope"
license = "MIT"

[dependencies]
rustc_tools_util = "0.1"
log = "0.4"
cargo_metadata = "0.14"
serde = "1"
serde_json = "1"
